--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:windowSoftInputMode="adjustResize"
             android:exported="false"
             android:theme="@style/Theme.AppBlackDog" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="$AIzaSyBQojR1JcKQA7vFsq2R8MFUeTK3WiNppVQ" />
     </application>
 
 </manifest>
